<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme"
    android:background="@color/transparent"
    >

    <LinearLayout
        android:layout_width="300sp"
        android:padding="24dp"
        android:layout_centerInParent="true"
        android:background="@color/dark_primary_800"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:id="@+id/message"
            android:text="@string/ARE_U_SURE_TO_DELETE"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/message">



            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/grey_200"
                android:id="@+id/delete"
                android:textStyle="bold"
                android:text="@string/YES_DELETE"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="@dimen/_6sdp"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/primary_500"
                android:id="@+id/cancle"
                android:textStyle="bold"
                android:text="@string/NO_TEXT"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>